[gd_scene load_steps=7 format=3 uid="uid://dl2enin2kdhpt"]

[ext_resource type="Script" path="res://scripts/test/tile_test_scene.gd" id="1_gdbsu"]
[ext_resource type="PackedScene" uid="uid://bcqslfu5prjqw" path="res://scenes/order_queue.tscn" id="2_o2r1v"]
[ext_resource type="PackedScene" uid="uid://rq3efqdy66xw" path="res://scenes/test/tile_test_ui.tscn" id="2_v0ss1"]
[ext_resource type="Resource" uid="uid://3782s0ecxmy6" path="res://resources/food/hamburger.tres" id="3_450gv"]
[ext_resource type="PackedScene" uid="uid://bev6mgo444j38" path="res://scenes/tile.tscn" id="3_hpq1o"]
[ext_resource type="Script" path="res://scripts/map.gd" id="3_nrk8f"]

[node name="TileTestScene" type="Node2D"]
script = ExtResource("1_gdbsu")

[node name="OrderQueue" parent="." instance=ExtResource("2_o2r1v")]
upcoming_orders = Array[Resource("res://scripts/food.gd")]([ExtResource("3_450gv")])

[node name="TileTestUI" parent="." instance=ExtResource("2_v0ss1")]

[node name="Tiles" type="Node" parent="."]
script = ExtResource("3_nrk8f")

[node name="Tile" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(288, 32)

[node name="Tile2" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(352, 32)

[node name="Tile3" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(416, 32)

[node name="Tile4" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(480, 32)

[node name="Tile5" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(544, 32)

[node name="Tile6" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(608, 32)

[node name="Tile7" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(672, 32)

[node name="Tile8" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(736, 32)

[node name="Tile9" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(288, 96)

[node name="Tile10" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(352, 96)

[node name="Tile11" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(416, 96)

[node name="Tile12" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(480, 96)

[node name="Tile13" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(544, 96)

[node name="Tile14" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(608, 96)

[node name="Tile15" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(672, 96)

[node name="Tile16" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(736, 96)

[node name="Tile17" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(288, 160)

[node name="Tile18" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(352, 160)

[node name="Tile19" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(416, 160)

[node name="Tile20" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(480, 160)

[node name="Tile21" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(544, 160)

[node name="Tile22" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(608, 160)

[node name="Tile23" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(672, 160)

[node name="Tile24" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(736, 160)

[node name="Tile25" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(288, 224)

[node name="Tile26" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(352, 224)

[node name="Tile27" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(416, 224)

[node name="Tile28" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(480, 224)

[node name="Tile29" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(544, 224)

[node name="Tile30" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(608, 224)

[node name="Tile31" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(672, 224)

[node name="Tile32" parent="Tiles" instance=ExtResource("3_hpq1o")]
position = Vector2(736, 224)

[connection signal="current_orders_changed" from="OrderQueue" to="TileTestUI" method="_on_order_queue_current_orders_changed"]
[connection signal="submit_order" from="TileTestUI" to="." method="_on_tile_test_ui_submit_order"]
